<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
...
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:gravity="start|top"
                android:autofillHints="@string/description"
                android:inputType="textMultiLine|textCapSentences"
                android:hint="@string/description"
...
                android:hint="@string/select_sold_date"
                android:textAlignment="gravity"
                android:focusable="false"
                android:visibility="gone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"/>
    </LinearLayout>
</ScrollView>
