<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:contentDescription="@string/photo"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"/>
    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/imageView"
        />
</RelativeLayout>
