<!-- res/layout/fragment_loan_simulation.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/edittext_loan_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount_needed"
            android:autofillHints="@string/amount_needed"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/edittext_loan_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration_in_years"
            android:autofillHints="@string/duration_in_years"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/edittext_interest_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/taux_d_interet"
            android:autofillHints="@string/taux_d_interet"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_simulation" />

    <TextView
        android:id="@+id/textview_monthly_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textview_total_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textview_interest_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="18sp" />
</LinearLayout>