...
    <string name="search">Search</string>
    <string name="zero">0</string>
    <string name="loan_simulator">Loan simulator</string>
    <string name="amount_needed">Amount needed</string>
    <string name="duration_in_years">Duration in years</string>
    <string name="taux_d_interet">Taux d\'intérêt</string>
    <string name="launch_simulation">Launch simulation</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_a_picture_btn">Add a picture action</string>
</resources>
